--- a/index.html
+++ b/index.html
@@ -18,23 +18,42 @@
         </nav>
     </header>
 
-    <section id="carousel-slides">
-        <!--at least 4 images-->
-        <div class="carousel-slide active">
-            <img src="https://images.pexels.com/photos/70441/pexels-photo-70441.jpeg?auto=compress&cs=tinysrgb&w=600" alt="first slide">
+    <div class="slider-main">
+        <div class="slider-container">
+            <div class="each-slide standard-slide">
+                <img src="https://images.pexels.com/photos/70441/pexels-photo-70441.jpeg?auto=compress&cs=tinysrgb&w=600" alt="first slide">
+            </div>
+            <div class="each-slide">
+                <img src="https://images.pexels.com/photos/2017802/pexels-photo-2017802.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
+            <div class="each-slide">
+                <img src="https://images.pexels.com/photos/2363807/pexels-photo-2363807.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
+            <div class="each-slide">
+                <img src="https://images.pexels.com/photos/1838554/pexels-photo-1838554.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
+            <div class="each-slide">
+                <img src="https://images.pexels.com/photos/70441/pexels-photo-70441.jpeg?auto=compress&cs=tinysrgb&w=600" alt="first slide">
+            </div>
         </div>
-        <div class="carousel-slide">
-            <img src="https://images.pexels.com/photos/2017802/pexels-photo-2017802.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
-        </div>
-        <div class="carousel-slide">
-            <img src="https://images.pexels.com/photos/2363807/pexels-photo-2363807.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
-        </div>
-        <div class="carousel-slide">
-            <img src="https://images.pexels.com/photos/1838554/pexels-photo-1838554.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
-        </div>
+    </div>
+
+    <!-- <section id="carousel-slides">
+            <div class="carousel-slide active">
+                <img src="https://images.pexels.com/photos/70441/pexels-photo-70441.jpeg?auto=compress&cs=tinysrgb&w=600" alt="first slide">
+            </div>
+            <div class="carousel-slide">
+                <img src="https://images.pexels.com/photos/2017802/pexels-photo-2017802.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="https://images.pexels.com/photos/2363807/pexels-photo-2363807.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="https://images.pexels.com/photos/1838554/pexels-photo-1838554.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Slide 2">
+            </div>
         <button class="carousel-prev"> &#8249;</button>
         <button class="carousel-next"> &#8250;</button>
-    </section>
+    </section> -->
     <section id="services">
         <h2>Services Offered:</h2>
         <ul>
